@@ -6,19 +6,18 @@ import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Component;
 
 import javax.annotation.PostConstruct;
-import java.util.Arrays;
 import java.util.List;
-
 
 @Component
 @Slf4j
 public class PostConstructLogger {
 
     @Autowired
-    private Environment env;
+    private Environment environment;
 
-    private static final List<String> PROPS = Arrays.asList(
+    private static final List<String> ENVIRONMENT_PROPERTY_KEYS = List.of(
             "APP_CRON_STRING",
+            "APP_DRY_RUN_MODE",
             "LIBRA_ENDPOINTURI",
             "DATASOURCE_USERNAME",
             "DATASOURCE_URL",
@@ -33,15 +32,20 @@ public class PostConstructLogger {
             "debug",
             "client.default-uri");
 
-
     @PostConstruct
     public void init() {
-
         log.info("====== Environment and configuration ======");
-
-        PROPS.stream()
-                .forEach(prop -> log.info("{}: {}", prop, env.getProperty(prop)));
-
+        logEnvironmentProperties();
+        logSlf4jLoggingImplementation();
         log.info("===========================================");
+    }
+
+    private static void logSlf4jLoggingImplementation() {
+        log.info("SLF4J is using the logging implementation: {}", log.getClass().getCanonicalName());
+    }
+
+    private void logEnvironmentProperties() {
+        ENVIRONMENT_PROPERTY_KEYS
+                .forEach(propertyKey -> log.info("ENVIRONMENT_PROPERTY: {} VALUE: {}", propertyKey, environment.getProperty(propertyKey)));
     }
 }
